--- a/kadai_015/style.css
+++ b/kadai_015/style.css
@@ -11,7 +11,7 @@ body{
   color: rgb(255, 192, 203);
 }
 h1{
-  font-family: "Noto Sans JP", sans-serif; 
+  font-family: "Josefin Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
@@ -23,7 +23,7 @@ h1{
   font-family: sans-serif
 }
 h1{
-  letter-spacing: 1.2rem;
+  letter-spacing: 1.2em;
 }
 h1{
   text-shadow: 1px 1px 4px lightslategray;
@@ -33,4 +33,7 @@ h1{
 }
 body{
   text-align: center;
+}
+#basic > p {
+  font-weight: bold;
 }
